<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/backgroundnodude"
    android:padding="@dimen/def_pagePadding"
    tools:context="com.sportify.createEvent.createEventPageOne.activity.CreateEventPageOneActivity">

    <TextView
        android:id="@+id/createEventHeader"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="@dimen/header"
        android:textColor="@color/colorCrystalWhite"
        android:fontFamily="serif"
        android:textStyle="italic"
        android:text="@string/create_event"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />

    <EditText
        android:id="@+id/etEventName"
        android:layout_width="280dp"
        android:layout_height="46dp"
        android:ems="8"
        android:textSize="@dimen/inputeSize"
        android:layout_marginStart="8dp"
        android:hint="@string/event_name"
        android:layout_marginTop="75dp"
        android:layout_below="@+id/createEventHeader"
        android:layout_alignParentStart="true"
        android:layout_toStartOf="@+id/imageButton7" />

    <CheckBox
        android:id="@+id/cbEventPrivate"
        android:layout_width="78dp"
        android:layout_height="22dp"
        android:text="@string/event_private"
        android:textColor="@color/colorPrimaryDarkGrey"
        android:layout_marginEnd="14dp"
        android:layout_alignBaseline="@+id/etEventName"
        android:layout_alignBottom="@+id/etEventName"
        android:layout_alignParentEnd="true" />


    <AutoCompleteTextView
        android:id="@+id/etEventPlace"
        android:layout_width="280dp"
        android:layout_height="44dp"
        android:ems="8"
        android:textSize="@dimen/inputeSize"
        android:inputType="textPersonName"
        android:hint="@string/event_place"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="4dp"
        android:layout_below="@+id/etEventName"
        android:layout_alignParentStart="true"
        android:layout_marginTop="10dp"
        android:completionThreshold="1"/>

    <ImageButton
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:background="@drawable/mapview2"
        android:clickable="true"
        android:layout_alignTop="@+id/etEventPlace"
        android:layout_alignStart="@+id/Next"
        android:id="@+id/imageButton7"
        tools:ignore="ContentDescription" />


    <EditText
        android:id="@+id/etEventPrice"
        android:layout_width="62dp"
        android:layout_height="44dp"
        android:textSize="@dimen/inputeSize"
        android:ems="8"
        android:hint="@string/event_price"
        android:inputType="number"
        android:layout_alignBaseline="@+id/etEventStartDate"
        android:layout_alignBottom="@+id/etEventStartDate"
        android:layout_toEndOf="@+id/etEventType" />

    <EditText
        android:id="@+id/etEventStartDate"
        android:ems="8"
        android:hint="@string/event_date_hint"
        android:focusable="false"
        android:textSize="@dimen/inputeSize"
        android:layout_width="106dp"
        android:layout_height="45dp"
        android:inputType="date"
        android:layout_below="@+id/etEventPlace"
        android:layout_alignStart="@+id/etEventPlace" />


    <EditText
        android:id="@+id/etEventStartTime"
        android:layout_width="103dp"
        android:textSize="@dimen/inputeSize"
        android:layout_height="44dp"
        android:ems="8"
        android:layout_marginStart="8dp"
        android:hint="@string/event_start_time"
        android:focusable="false"
        android:layout_below="@+id/etEventStartDate" />


    <EditText
        android:id="@+id/etEventEndTime"
        android:layout_width="103dp"
        android:layout_height="44dp"
        android:ems="8"
        android:textSize="@dimen/inputeSize"
        android:hint="@string/event_end_time"
        android:focusable="false"
        android:layout_above="@+id/etEventType"
        android:layout_alignStart="@+id/etEventPrice" />

    <AutoCompleteTextView
        android:id="@+id/etEventType"
        android:layout_width="111dp"
        android:layout_height="38dp"
        android:ems="8"
        android:layout_marginStart="8dp"
        android:layout_marginTop="25dp"
        android:textSize="@dimen/inputeSize"
        android:focusable="false"
        android:hint="@string/event_kategori"
        android:inputType="textPersonName"
        android:layout_below="@+id/etEventStartTime"
        android:layout_marginBottom="70dp" />

    <EditText
        android:id="@+id/etEventMaxAttendance"
        android:layout_width="140dp"
        android:layout_height="38dp"
        android:ems="8"
        android:textSize="@dimen/inputeSize"
        android:hint="@string/event_max_attendance"
        android:inputType="number"
        android:layout_alignBaseline="@+id/etEventType"
        android:layout_alignBottom="@+id/etEventType"
        android:layout_toStartOf="@+id/cbEventPrivate" />


    <TextView
        android:id="@+id/ttViewAddPic"
        android:layout_width="82dp"
        android:layout_height="33dp"
        android:text="@string/event_pic"
        android:onClick="eventPictureButtonClick"
        android:layout_alignBottom="@+id/etEventDescription"
        android:layout_alignEnd="@+id/etEventType" />

    <ImageButton
        android:id="@+id/imageButton3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@android:color/transparent"
        app:srcCompat="@drawable/camera5"
        android:clickable="true"
        android:onClick="eventPictureButtonClick"
        android:layout_alignTop="@+id/etEventDescription"
        android:layout_alignEnd="@+id/etEventStartTime"
        tools:ignore="ContentDescription" />

    <EditText
        android:id="@+id/etEventDescription"
        android:layout_width="219dp"
        android:layout_height="113dp"
        android:background="@drawable/border"
        android:textColor="@color/colorPrimaryDark"
        android:gravity="top"
        android:lines="2"
        android:hint="@string/event_descr_hint"
        android:textSize="@dimen/standardSmallerTextSize"
        android:inputType="textMultiLine"
        android:layout_above="@+id/Next"
        android:layout_alignParentEnd="true"
        android:layout_marginBottom="13dp" />

   <!-- <Button
        android:id="@+id/createEventButton"
        android:layout_width="114dp"
        android:layout_height="48dp"
        android:layout_gravity="center_horizontal"
        android:background="@color/colorButton"
        android:onClick="createEventClick"
        android:text="@string/create_event"
        android:textColor="@color/buttonDark"
        android:fontFamily="sans-serif-condensed"
        android:textStyle="bold"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="10dp"
        android:layout_marginStart="10dp"/>-->


    <TextView
        android:id="@+id/Next"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/event_realnext"
        android:textSize="15sp"
        android:textStyle="bold"
        android:onClick="createEventClick"
        android:layout_gravity="end|center_horizontal"
        android:clickable="true"
        android:textColor="@color/colorPrimary"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true" />

</RelativeLayout>