...

    <string name="event_max_attendance">Max deltagare </string>
    <string name="createEvent_here">Skapa ditt event här</string>
    <string name="find_event">Hitta event</string>

    /* Error messages create event */
    <string name="event_name_empty_error">Ange namn</string>
    <string name="event_price_wrongformat_error">Pris är i fel format</string>
    <string name="event_date_empty_error">Ange datum</string>
    <string name="event_date_wrongformat_error">Datum är i fel format</string>
    <string name="event_start_time_empty_error">Ange starttid</string>
    <string name="event_end_time_empty_error">Ange sluttid</string>
    <string name="event_type_empty_error">Ange eventtyp</string>
    <string name="event_place_empty_error">Ange plats</string>


...
