...
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.245" />

<EditText
    android:id="@+id/etProfileNameHint"
    android:layout_width="177dp"
    android:layout_height="38dp"
    android:layout_marginBottom="8dp"
    android:layout_marginLeft="8dp"
    android:layout_marginRight="8dp"
    android:layout_marginTop="8dp"
...
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="8dp"
        app:layout_constraintHorizontal_bias="0.468"
        app:layout_constraintVertical_bias="0.346" />

    <EditText
        android:id="@+id/etLastnameHint"
        android:layout_width="175dp"
        android:layout_height="46dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:backgroundTint="@color/colorPrimaryDarkGrey"
        android:drawableEnd="@drawable/asteriskicon"
...
    app:layout_constraintTop_toTopOf="parent"
    app:layout_constraintVertical_bias="0.452"
    android:layout_marginStart="8dp"
    android:layout_marginEnd="8dp" />

    <EditText
    android:id="@+id/etProfileBirthdayhint"
    android:layout_width="175dp"
    android:layout_height="37dp"
    android:layout_marginBottom="8dp"
    android:layout_marginLeft="8dp"
    android:layout_marginRight="8dp"
    android:layout_marginTop="8dp"
...
    app:layout_constraintRight_toRightOf="parent"
    app:layout_constraintTop_toTopOf="parent"
        android:layout_marginStart="8dp"
    android:layout_marginEnd="8dp" />

    <CheckBox
    android:id="@+id/cbProfileFotboll"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginBottom="8dp"
    android:layout_marginLeft="8dp"
    android:layout_marginRight="8dp"
    android:layout_marginTop="8dp"
...
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.851"
        app:layout_constraintHorizontal_bias="0.448" />

    <ImageButton
        android:id="@+id/ibCheckboxProfileButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="8dp"
...
