<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/def_pagePadding"
    android:background="@drawable/backgroundnodude"
    tools:context="com.sportify.login.activity.LoginActivity" >

    <TextView
        android:id="@+id/loginHeader"
        android:layout_width="124dp"
        android:layout_height="47dp"
        android:text="@string/log_in"
        android:textSize="@dimen/header"
        android:textColor="@color/colorCrystalWhite"
        android:fontFamily="serif"
        android:textStyle="italic"
        android:layout_centerHorizontal="true"
        android:paddingTop="10dp"/>

    <EditText
        android:id="@+id/etLoginEmail"
        android:backgroundTint="@color/colorPrimaryDark"
        android:drawableStart="@drawable/mail"
        android:drawablePadding="15sp"
        android:ems="10"
        android:fontFamily="serif"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:textColorHint="@color/colorPrimaryDark"
        android:textStyle="italic"
        android:layout_width="327dp"
        android:layout_height="43dp"
        android:layout_above="@+id/etLoginPassword"
        android:layout_centerHorizontal="true"/>


    <EditText
        android:id="@+id/etLoginPassword"
        android:layout_width="327dp"
        android:layout_height="43dp"
        android:drawableStart="@drawable/user"
        android:drawablePadding="15sp"
        android:ems="10"
        android:fontFamily="serif"
        android:hint="@string/logpassword"
        android:inputType="textPassword"
        android:textColorHint="@color/colorPrimaryDark"
        android:backgroundTint="@color/colorPrimaryDark"
        android:textStyle="italic"
        android:layout_centerHorizontal="true"
        android:layout_above="@+id/loginButton"
        android:layout_marginTop="10dp"/>


    <Button
        android:id="@+id/loginButton"
        android:layout_width="88dp"
        android:layout_height="45dp"
        android:textColor="@color/buttonDark"
        android:background="@color/colorButton"
        android:onClick="loginButtonClick"
        android:fontFamily="sans-serif-condensed"
        android:textStyle="bold"
        android:text="@string/log_in"
        android:layout_centerInParent="true"
        android:layout_marginTop="35dp"
        android:layout_marginBottom="20dp"/>

    <com.facebook.login.widget.LoginButton
        android:id="@+id/loginFacebookButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/loginButton"
        android:layout_marginBottom="10dp"/>
</RelativeLayout>

