<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/def_pagePadding"
    android:background="@drawable/backgroundnodude"
    tools:context="sportapp.pvt_sportapp.Activitys.RegisterActivity">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:orientation="vertical"
        tools:layout_editor_absoluteX="8dp"
        tools:layout_editor_absoluteY="8dp"
        android:id="@+id/linearLayout">


        <TextView
            android:id="@+id/tvSignUpMessage"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="" />

    </LinearLayout>

    <EditText
        android:id="@+id/etRegisterMail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/colorPrimaryDarkGrey"
        android:drawableStart="@drawable/mail"
        android:drawablePadding="15sp"
        android:ems="10"
        android:fontFamily="serif"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:textColorHint="@color/colorPrimaryDark"
        android:textStyle="italic"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="47dp"
        android:layout_alignBottom="@+id/etRegisterPassword"
        android:layout_centerHorizontal="true" />

    <Button
        android:id="@+id/registerButton"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:background="@color/colorButton"
        android:drawablePadding="15sp"
        android:fontFamily="sans-serif-condensed"
        android:onClick="signUpButtonClick"
        android:text="@string/sign_up"
        android:textColor="@color/buttonDark"
        android:layout_below="@+id/linearLayout"
        android:layout_alignEnd="@+id/registerHeader"
        android:layout_marginTop="64dp" />

    <EditText
        android:id="@+id/etRegisterPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:drawableStart="@drawable/key2"
        android:drawablePadding="15sp"
        android:backgroundTint="@color/colorPrimaryDarkGrey"
        android:ems="10"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="26dp"
        android:fontFamily="serif"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:textColorHint="@color/colorPrimaryDark"
        android:textStyle="italic"
        android:layout_above="@+id/registerButton"
        android:layout_alignParentStart="true" />

    <TextView
        android:id="@+id/registerHeader"
        android:layout_width="wrap_content"
        android:text="@string/register_here"
        android:layout_height="wrap_content"
        android:textSize="@dimen/header"
        android:textColor="@color/colorCrystalWhite"
        android:fontFamily="serif"
        android:textStyle="italic"
        android:layout_marginTop="25dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />

</RelativeLayout>
